# snake-app

./: CMakeLists.txt
assets/resources/: liquid_blur.frag  snake.frag
client/includes/: event_system2.hpp
client/interfaces/: game.hpp
client/resources/: glow.frag
client/src/: common.hpp
client/src/game/: logic.cpp  math.cpp
client/src/game/entities/: food.hpp
client/src/graphics/: render.cpp
client/src/server/: connection.cpp  packets.cpp  packets.hpp  session.hpp
old/client/: CMakeLists.txt  main.cpp
old/client/includes/: logging.hpp
old/client/interfaces/: graphics.hpp  server.hpp
old/client/src/: snake_client.cpp
old/client/src/game/: logic.hpp  math.hpp
old/client/src/game/entities/: base_entity.hpp  snake.hpp
old/client/src/graphics/: render.cpp  render.hpp
old/client/src/server/: connection.hpp
old/server/: CMakeLists.txt
old/server/includes/: event_system2.hpp
old/server/interfaces/: game.hpp
old/server/src/: common.hpp
old/server/src/game/: logic.cpp  logic.hpp  math.hpp
old/server/src/server/: packets.cpp  packets.hpp  session.hpp
server/interfaces/: server.hpp
server/src/: snake_server.cpp
server/src/game/: game_state.hpp  math.cpp
server/src/server/: connection.cpp  connection.hpp
src/: snake_app.cpp
src/components/local_storage/: [auto_loader].cpp  storage.cpp  storage.hpp
src/components/local_storage/interfaces/: common.hpp  storage.hpp
src/network/websocket/: [auto_loader].cpp  client.cpp  client.hpp  headers.hpp  message.hpp
src/network/websocket/interfaces/: client.hpp
src/network/websocket/interfaces/response/: [base].hpp  player_session.hpp
src/services/game/: [auto_loader].cpp  controller.cpp  controller.hpp  game_client.cpp  game_client.hpp
src/services/game/interfaces/: common.hpp  controller.hpp  game_client.hpp
src/services/render/: [auto_loader].cpp  controller.cpp  controller.hpp
src/services/render/components/: [base_component].hpp
src/services/render/components/block/: component.cpp  component.hpp
src/services/render/components/button/: component.cpp  component.hpp
src/services/render/components/input/: component.cpp  component.hpp
src/services/render/components/loader/: component.cpp  component.hpp
src/services/render/components/overlay/: component.cpp  component.hpp
src/services/render/components/text/: component.cpp  component.hpp
src/services/render/interfaces/: common.hpp  controller.hpp
src/services/render/pages/: [pages_loader].hpp  authorization.cpp  authorization.hpp  connecting.cpp  connecting.hpp  joining_session.cpp  joining_session.hpp  main_menu.cpp  main_menu.hpp  playing.cpp  playing.hpp
